[package]
name = "texture_bag"
version = "0.0.1"
authors = ["artistarc <asera2@yandex.ru>"]
edition = "2018"
description = "Simple storage and loader for glium textures"
repository = "https://github.com/Asera/texture_bag"
license = "MIT"
keywords = ["glium", "graphics", "gamedev", "textures"]
categories = ["game-development", "graphics", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
image = "0.23.12"
glium = "0.29.0"